--- a/pom.xml
+++ b/pom.xml
@@ -22,6 +22,7 @@
 		<log4j.version>2.17.0</log4j.version>
 		<spring.boot.version>2.6.1</spring.boot.version>
 		<spring.cloud.version>2021.0.0</spring.cloud.version>
+		<jackson-databind.version>2.13.4</jackson-databind.version>
 		<cxf.version>3.4.3</cxf.version>
 		<keycloak.version>12.0.3</keycloak.version>
 		<sonar.coverage.exclusions>
@@ -57,6 +58,11 @@
 				<groupId>org.apache.logging.log4j</groupId>
 				<artifactId>log4j-core</artifactId>
 				<version>${log4j.version}</version>
+			</dependency>
+			<dependency>
+				<groupId>com.fasterxml.jackson.core</groupId>
+				<artifactId>jackson-databind</artifactId>
+				<version>${jackson-databind.version}</version>
 			</dependency>
 		</dependencies>
 	</dependencyManagement>
