--- a/pom.xml
+++ b/pom.xml
@@ -20,6 +20,7 @@
 		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
 		<java.version>11</java.version>
 		<log4j.version>2.17.0</log4j.version>
+		<keycloak-core.version>15.1.1</keycloak-core.version>
 		<spring.boot.version>2.6.1</spring.boot.version>
 		<spring.cloud.version>2021.0.0</spring.cloud.version>
 		<jackson-databind.version>2.13.4</jackson-databind.version>
@@ -35,6 +36,11 @@
 
 	<dependencyManagement>
 		<dependencies>
+			<dependency>
+				<groupId>org.keycloak</groupId>
+				<artifactId>keycloak-core</artifactId>
+				<version>${keycloak-core.version}</version>
+			</dependency>
 			<dependency>
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-dependencies</artifactId>
