--- a/pom.xml
+++ b/pom.xml
@@ -26,6 +26,7 @@
 		<jackson-databind.version>2.13.4</jackson-databind.version>
 		<cxf.version>3.4.3</cxf.version>
 		<keycloak.version>12.0.3</keycloak.version>
+		<spring.boot.starter.web.version>2.6.6</spring.boot.starter.web.version>
 		<sonar.coverage.exclusions>
 			**/SoapApiApplication.java,
 			**/config/**/*,
@@ -69,6 +70,11 @@
 				<groupId>com.fasterxml.jackson.core</groupId>
 				<artifactId>jackson-databind</artifactId>
 				<version>${jackson-databind.version}</version>
+			</dependency>
+			<dependency>
+				<groupId>org.springframework.boot</groupId>
+				<artifactId>spring-boot-starter-web</artifactId>
+				<version>${spring.boot.starter.web.version}</version>
 			</dependency>
 		</dependencies>
 	</dependencyManagement>
