--- a/pom.xml
+++ b/pom.xml
@@ -13,7 +13,7 @@
 
 	<properties>
 		<model.core.version>1.9.4.1</model.core.version>
-		<ddm.starter.logger.version>1.6.0.1</ddm.starter.logger.version>
+		<ddm.starter.logger.version>1.6.0.9</ddm.starter.logger.version>
 		<ddm.starter.actuator.version>1.6.0.1</ddm.starter.actuator.version>
 		<ddm.starter.audit.version>1.6.0.1</ddm.starter.audit.version>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
@@ -98,7 +98,7 @@
 		</dependency>
 		<dependency>
 			<groupId>com.epam.digital.data.platform</groupId>
-			<artifactId>ddm-starter-logger2</artifactId>
+			<artifactId>ddm-starter-logger</artifactId>
 			<version>${ddm.starter.logger.version}</version>
 		</dependency>
 		<dependency>
